education overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1022,6 +1022,7 @@ h2.style{
     z-index: 0;
     display: grid;
     align-items: center;
+    overflow: hidden;
  }
 
  .feature-3 .top-bottom:before {
